[bug 617347] Make replies show up immediately on the page. [bug 617489] Wrap <ul>s around the <li>s in tweet replies, and don't put <div>s directly inside <ul>s. [bug 617202] Keep reply counts up to date.
Also...
* Remove errant <li> disc from reply tweets.
* Stop keeping last reply in local storage; we don't need it anymore.
* Fix possible bug where mark_my_replies() would fail if there were multiple replies to a tweet.

--- a/media/css/customercare.css
+++ b/media/css/customercare.css
@@ -108,6 +108,10 @@
 }
 
 #tweets li {
+    list-style-type: none;
+}
+
+#tweets div.tweet-contents {
     border-top: 1px solid #ccc;
     cursor: pointer;
     margin-bottom: 0px;
@@ -115,20 +119,21 @@
     padding: 10px;
     width: 630px;
 }
-
-#tweets li.alt {
-    background: -moz-linear-gradient(top, #fff, #f5f5f5);
-    background: -webkit-gradient(linear, center top, center bottom, from(#fff), to(#f5f5f5));
-}
-#tweets li.reply {
+#tweets div.replies div.tweet-contents {
     padding-left: 70px;
     width: 570px;
 }
+#tweets div.alt {
+    background: -moz-linear-gradient(top, #fff, #f5f5f5);
+    background: -webkit-gradient(linear, center top, center bottom, from(#fff), to(#f5f5f5));
+}
+
 #tweets div.replies {
+    clear: left;
     display: none;
 }
 
-#tweets li:hover {
+#tweets div.tweet-contents:hover {
     background: -moz-linear-gradient(top, #fffffd, #fdefa6);
     background: -webkit-gradient(linear, center top, center bottom, from(#fff), to(#fdefa6));
     border-top: 1px solid #fef1ad;
